--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -1222,40 +1222,57 @@
             <objects>
                 <viewController id="xqt-If-8UY" customClass="BRLogsTextViewController" sceneMemberID="viewController">
                     <view key="view" id="5te-AQ-jce">
-                        <rect key="frame" x="0.0" y="0.0" width="549" height="276"/>
+                        <rect key="frame" x="0.0" y="0.0" width="549" height="296"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwf-Pg-oCd">
-                                <rect key="frame" x="20" y="20" width="509" height="236"/>
-                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="Urt-nD-F0c">
-                                    <rect key="frame" x="0.0" y="0.0" width="494" height="236"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="PCO-NY-c1K">
+                            <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="2" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9br-Ie-Rei">
+                                <rect key="frame" x="20" y="20" width="509" height="256"/>
+                                <subviews>
+                                    <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwf-Pg-oCd">
+                                        <rect key="frame" x="0.0" y="20" width="509" height="236"/>
+                                        <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="Urt-nD-F0c">
                                             <rect key="frame" x="0.0" y="0.0" width="494" height="236"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="494" height="236"/>
-                                            <size key="maxSize" width="509" height="10000000"/>
-                                            <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                        </textView>
-                                    </subviews>
-                                </clipView>
-                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="sVu-nM-rxN">
-                                    <rect key="frame" x="494" y="0.0" width="15" height="236"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                            </scrollView>
+                                            <subviews>
+                                                <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="PCO-NY-c1K">
+                                                    <rect key="frame" x="0.0" y="0.0" width="494" height="236"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    <size key="minSize" width="494" height="236"/>
+                                                    <size key="maxSize" width="509" height="10000000"/>
+                                                    <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                </textView>
+                                            </subviews>
+                                        </clipView>
+                                        <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="sVu-nM-rxN">
+                                            <rect key="frame" x="494" y="0.0" width="15" height="236"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                    </scrollView>
+                                    <progressIndicator wantsLayer="YES" maxValue="100" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="ZAf-QW-F2I">
+                                        <rect key="frame" x="205" y="-1" width="100" height="20"/>
+                                    </progressIndicator>
+                                </subviews>
+                                <visibilityPriorities>
+                                    <integer value="1000"/>
+                                    <integer value="1000"/>
+                                </visibilityPriorities>
+                                <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
+                                    <real value="3.4028234663852886e+38"/>
+                                </customSpacing>
+                            </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="jwf-Pg-oCd" firstAttribute="leading" secondItem="5te-AQ-jce" secondAttribute="leading" constant="20" id="Jax-I2-euM"/>
-                            <constraint firstAttribute="bottom" secondItem="jwf-Pg-oCd" secondAttribute="bottom" constant="20" id="RVx-t0-MhK"/>
-                            <constraint firstAttribute="trailing" secondItem="jwf-Pg-oCd" secondAttribute="trailing" constant="20" id="h2m-YP-Y1B"/>
-                            <constraint firstItem="jwf-Pg-oCd" firstAttribute="top" secondItem="5te-AQ-jce" secondAttribute="top" constant="20" id="xts-1M-8YA"/>
+                            <constraint firstItem="9br-Ie-Rei" firstAttribute="top" secondItem="5te-AQ-jce" secondAttribute="top" constant="20" id="4q2-hm-YWk"/>
+                            <constraint firstAttribute="trailing" secondItem="9br-Ie-Rei" secondAttribute="trailing" constant="20" id="dL6-Ag-nbQ"/>
+                            <constraint firstAttribute="bottom" secondItem="9br-Ie-Rei" secondAttribute="bottom" constant="20" id="n5I-yc-bLs"/>
+                            <constraint firstItem="9br-Ie-Rei" firstAttribute="leading" secondItem="5te-AQ-jce" secondAttribute="leading" constant="20" id="zXC-O2-uzb"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="loadingProgressIndicator" destination="ZAf-QW-F2I" id="fMg-gI-FeK"/>
                         <outlet property="logTextView" destination="PCO-NY-c1K" id="SjA-Yl-kx3"/>
                     </connections>
                 </viewController>
