--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -1222,14 +1222,14 @@
             <objects>
                 <viewController id="xqt-If-8UY" customClass="BRLogsTextViewController" sceneMemberID="viewController">
                     <view key="view" id="5te-AQ-jce">
-                        <rect key="frame" x="0.0" y="0.0" width="549" height="296"/>
+                        <rect key="frame" x="0.0" y="0.0" width="549" height="316"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="2" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9br-Ie-Rei">
-                                <rect key="frame" x="20" y="20" width="509" height="256"/>
+                                <rect key="frame" x="20" y="20" width="509" height="276"/>
                                 <subviews>
                                     <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwf-Pg-oCd">
-                                        <rect key="frame" x="0.0" y="0.0" width="509" height="256"/>
+                                        <rect key="frame" x="0.0" y="20" width="509" height="256"/>
                                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="Urt-nD-F0c">
                                             <rect key="frame" x="0.0" y="0.0" width="494" height="256"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1250,8 +1250,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <progressIndicator hidden="YES" wantsLayer="YES" maxValue="1" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="ZAf-QW-F2I">
-                                        <rect key="frame" x="0.0" y="237" width="509" height="20"/>
+                                    <progressIndicator wantsLayer="YES" maxValue="1" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="ZAf-QW-F2I">
+                                        <rect key="frame" x="0.0" y="-1" width="509" height="20"/>
                                     </progressIndicator>
                                 </subviews>
                                 <constraints>
