--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -1199,7 +1199,7 @@
         <!--Window Controller-->
         <scene sceneID="FJH-sd-lo4">
             <objects>
-                <windowController id="asu-PE-Roq" sceneMemberID="viewController">
+                <windowController id="asu-PE-Roq" customClass="BRLogsWindowController" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingMode="preferred" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="9PA-xQ-rRn">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -1249,29 +1249,60 @@
                                 </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="E38EBD5A-252C-481B-A70B-4A7EE616368E" label="Custom View" paletteLabel="Custom View" tag="-1" id="ftk-vS-gMF">
                                     <nil key="toolTip"/>
-                                    <size key="minSize" width="177" height="19"/>
-                                    <size key="maxSize" width="300" height="24"/>
-                                    <box key="view" misplaced="YES" boxType="custom" cornerRadius="4" title="Box" id="RwJ-Pi-dtN">
-                                        <rect key="frame" x="0.0" y="14" width="177" height="19"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <view key="contentView" id="izk-bj-yoG">
-                                            <rect key="frame" x="1" y="1" width="175" height="17"/>
+                                    <size key="minSize" width="177" height="18"/>
+                                    <size key="maxSize" width="300" height="23"/>
+                                    <box key="view" misplaced="YES" boxType="custom" borderType="none" cornerRadius="4" title="Box" id="RwJ-Pi-dtN">
+                                        <rect key="frame" x="0.0" y="14" width="177" height="23"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <view key="contentView" id="izk-bj-yoG" customClass="BRLogStatusView">
+                                            <rect key="frame" x="0.0" y="0.0" width="177" height="23"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bLy-ex-VQV">
-                                                    <rect key="frame" x="3" y="2" width="203" height="14"/>
-                                                    <textFieldCell key="cell" lineBreakMode="clipping" title="BitBot: feature/logs, development" id="xeK-zb-Bh5">
-                                                        <font key="font" size="10" name="Menlo-Regular"/>
-                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    </textFieldCell>
-                                                </textField>
+                                                <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" misplaced="YES" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ow5-SZ-UdE">
+                                                    <rect key="frame" x="0.0" y="3" width="219" height="20"/>
+                                                    <subviews>
+                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bLy-ex-VQV">
+                                                            <rect key="frame" x="8" y="1" width="203" height="19"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="19" id="Hj0-H9-dD7"/>
+                                                            </constraints>
+                                                            <textFieldCell key="cell" lineBreakMode="clipping" title="BitBot: feature/logs, development" id="xeK-zb-Bh5">
+                                                                <font key="font" size="10" name="Menlo-Regular"/>
+                                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                        </textField>
+                                                        <progressIndicator wantsLayer="YES" maxValue="1" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="hdc-nt-y9y">
+                                                            <rect key="frame" x="60" y="-1" width="100" height="3"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="1" id="2dE-Cj-4Ue"/>
+                                                            </constraints>
+                                                        </progressIndicator>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="bLy-ex-VQV" firstAttribute="leading" secondItem="ow5-SZ-UdE" secondAttribute="leading" constant="10" id="Emh-Ga-BLz"/>
+                                                        <constraint firstAttribute="trailing" secondItem="bLy-ex-VQV" secondAttribute="trailing" constant="10" id="Int-yB-FBZ"/>
+                                                    </constraints>
+                                                    <visibilityPriorities>
+                                                        <integer value="1000"/>
+                                                        <integer value="1000"/>
+                                                    </visibilityPriorities>
+                                                    <customSpacing>
+                                                        <real value="3.4028234663852886e+38"/>
+                                                        <real value="3.4028234663852886e+38"/>
+                                                    </customSpacing>
+                                                </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="bLy-ex-VQV" firstAttribute="centerY" secondItem="izk-bj-yoG" secondAttribute="centerY" id="E7j-8q-cjp"/>
-                                                <constraint firstAttribute="trailing" secondItem="bLy-ex-VQV" secondAttribute="trailing" constant="5" id="Phg-Hs-DJe"/>
-                                                <constraint firstItem="bLy-ex-VQV" firstAttribute="leading" secondItem="izk-bj-yoG" secondAttribute="leading" constant="5" id="R0c-tP-kES"/>
+                                                <constraint firstItem="ow5-SZ-UdE" firstAttribute="leading" secondItem="izk-bj-yoG" secondAttribute="leading" id="6Ea-6F-c0y"/>
+                                                <constraint firstItem="ow5-SZ-UdE" firstAttribute="top" secondItem="izk-bj-yoG" secondAttribute="top" constant="3" id="Vf2-Xb-o8J"/>
+                                                <constraint firstAttribute="trailing" secondItem="ow5-SZ-UdE" secondAttribute="trailing" id="dca-c6-dWG"/>
+                                                <constraint firstAttribute="bottom" secondItem="ow5-SZ-UdE" secondAttribute="bottom" id="rcg-gn-cJm"/>
                                             </constraints>
+                                            <connections>
+                                                <outlet property="progressIndicator" destination="hdc-nt-y9y" id="S26-8p-5zF"/>
+                                                <outlet property="statusField" destination="bLy-ex-VQV" id="EFf-Df-LoI"/>
+                                            </connections>
                                         </view>
                                         <color key="fillColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                     </box>
@@ -1290,6 +1321,7 @@
                         </connections>
                     </window>
                     <connections>
+                        <outlet property="statusView" destination="izk-bj-yoG" id="jeF-AH-Fyu"/>
                         <segue destination="xqt-If-8UY" kind="relationship" relationship="window.shadowedContentViewController" id="SW2-pD-3HD"/>
                     </connections>
                 </windowController>
@@ -1309,22 +1341,22 @@
                                 <rect key="frame" x="20" y="20" width="563" height="342"/>
                                 <subviews>
                                     <tabView type="noTabsNoBorder" translatesAutoresizingMaskIntoConstraints="NO" id="cbc-IN-zEz">
-                                        <rect key="frame" x="0.0" y="20" width="563" height="322"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="563" height="342"/>
                                         <font key="font" metaFont="system"/>
                                         <tabViewItems>
                                             <tabViewItem label="List" identifier="2" id="Ye4-rZ-oTg">
                                                 <view key="view" id="X7P-pH-Kio">
-                                                    <rect key="frame" x="0.0" y="0.0" width="563" height="322"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="563" height="342"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GMI-Q2-Lr3">
-                                                            <rect key="frame" x="0.0" y="0.0" width="563" height="322"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="563" height="342"/>
                                                             <clipView key="contentView" id="0Mu-cS-gwT">
-                                                                <rect key="frame" x="1" y="1" width="561" height="320"/>
+                                                                <rect key="frame" x="1" y="1" width="561" height="340"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" usesAutomaticRowHeights="YES" viewBased="YES" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="QND-Gb-Yia" id="gPV-NE-8Lt">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="561" height="320"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="561" height="340"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <size key="intercellSpacing" width="3" height="2"/>
                                                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1399,7 +1431,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="563" height="322"/>
                                                             <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="Urt-nD-F0c">
                                                                 <rect key="frame" x="0.0" y="0.0" width="548" height="322"/>
-                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="PCO-NY-c1K">
                                                                         <rect key="frame" x="0.0" y="0.0" width="548" height="322"/>
@@ -1407,7 +1439,7 @@
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                         <size key="minSize" width="548" height="322"/>
-                                                                        <size key="maxSize" width="548" height="10000000"/>
+                                                                        <size key="maxSize" width="563" height="10000000"/>
                                                                         <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                     </textView>
                                                                 </subviews>
@@ -1428,20 +1460,11 @@
                                             </tabViewItem>
                                         </tabViewItems>
                                     </tabView>
-                                    <progressIndicator wantsLayer="YES" maxValue="1" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="ZAf-QW-F2I">
-                                        <rect key="frame" x="0.0" y="-1" width="563" height="20"/>
-                                    </progressIndicator>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="ZAf-QW-F2I" secondAttribute="trailing" id="RAk-Bm-fqc"/>
-                                    <constraint firstItem="ZAf-QW-F2I" firstAttribute="leading" secondItem="9br-Ie-Rei" secondAttribute="leading" id="WY0-Mf-ank"/>
-                                </constraints>
                                 <visibilityPriorities>
-                                    <integer value="1000"/>
                                     <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
-                                    <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
@@ -1454,7 +1477,6 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="loadingProgressIndicator" destination="ZAf-QW-F2I" id="fMg-gI-FeK"/>
                         <outlet property="logOutlineView" destination="gPV-NE-8Lt" id="0S4-FD-7pH"/>
                         <outlet property="logTextView" destination="PCO-NY-c1K" id="SjA-Yl-kx3"/>
                         <outlet property="logsTabView" destination="cbc-IN-zEz" id="LLW-Ec-vD4"/>
